--- a/app/views/periods/index.html.erb
+++ b/app/views/periods/index.html.erb
@@ -11,14 +11,50 @@
 
 <div class="wrapper wrapper-content animated fadeInRight">
 <div class="ibox-content m-b-sm border-bottom">
-    <div class="container-fluid">
-        <% @periods.each do |period| %>
-            <div class="row">
-                <div class="col">
-                    <%= period.start_date %> hasta <%= period.finish_date %>
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="ibox">
+                <div class="ibox-content">
+
+                    <table class="footable table table-stripped toggle-arrow-tiny" data-page-size="15">
+                        <thead>
+                        <tr>
+                            <th data-toggle="true">Desde</th>
+                            <th data-hide="phone">Hasta</th>
+                            <th class="text-right" data-sort-ignore="true">Acciones</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <% @periods.each do |period| %>
+                        <tr>
+                            <td>
+                                <%= period.start_date %>
+                            </td>
+                            <td>
+                                <%= period.finish_date %>
+                            </td>
+                            <td class="text-right">
+                                <div class="btn-group">
+                                    <%= link_to "/periods/#{period.id}", :controller => "periods", :action => "show", :method => "get" do %>
+                                        <button class="btn-white btn btn-xs" style="border-radius: 0px;">Ver</button>
+                                    <% end %>
+                                </div>
+                            </td>
+                        </tr>
+                        <% end %>
+                        </tbody>
+                        <tfoot>
+                        <tr>
+                            <td colspan="6">
+                                <ul class="pagination float-right"></ul>
+                            </td>
+                        </tr>
+                        </tfoot>
+                    </table>
+
                 </div>
             </div>
-        <% end %>
+        </div>
     </div>
 </div>
 </div>
