--- a/app/views/periods/new.html.erb
+++ b/app/views/periods/new.html.erb
@@ -19,9 +19,9 @@
     <div class="form-group">
         <label>Inicio y término del periodo</label>
         <div class="input-daterange input-group" id="datepicker">
-            <input type="text" class="form-control-sm form-control" name="start"/>
+            <input required type="text" class="form-control-sm form-control" name="start"/>
             <span class="input-group-addon input-group-addon">Hasta</span>
-            <input type="text" class="form-control-sm form-control" name="end"/>
+            <input required type="text" class="form-control-sm form-control" name="end"/>
         </div>
     </div>
     <div class="hr-line-dashed"></div>
@@ -29,7 +29,7 @@
         <h1>Colaboradores</h1>
         <div class="step-content" style="position: relative">
             <label>Seleccione a los colaboradores de este periodo</label>
-            <select name="collaborators[]" class="form-control collaborators_select" multiple>
+            <select name="collaborators[]" class="form-control collaborators_select" multiple required>
                 <% @collaborators.each_with_index do |collaborator, index| %>
                     <option value="<%= collaborator.id %>"><%= collaborator.user.name %> <%= collaborator.user.last_name %> - <%= collaborator.user.rut %></option>
                 <% end %>
