--- a/app/views/periods/show.html.erb
+++ b/app/views/periods/show.html.erb
@@ -5,9 +5,118 @@
             <li class="breadcrumb-item">
                 <a href="<%= url_for :controller => 'periods', :action => 'index' %>">Periodos</a>
             </li>
+            <li class="breadcrumb-item">
+                <strong>Período</strong>
+            </li>
         </ol>
     </div>
 </div>
 
 <div class="wrapper wrapper-content animated fadeInRight">
+<div class="ibox-content m-b-sm border-bottom">
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="ibox">
+                <div class="ibox-title">
+                    <h3>Colaboradores</h3>
+                </div>
+                <div class="ibox-content">
+                    <table class="footable table table-stripped toggle-arrow-tiny" data-page-size="15">
+                        <thead>
+                        <tr>
+                            <th data-toggle="true">Nombre</th>
+                            <th data-toggle="true">Rut</th>
+                            <th data-toggle="true">Autoevaluación</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <% @collaborators.each do |collaborator| %>
+                        <tr>
+                            <td>
+                                <%= collaborator.collaborator.user.name %> <%= collaborator.collaborator.user.last_name %>
+                            </td>
+                            <td>
+                                <%= collaborator.collaborator.user.rut %>
+                            </td>
+                            <td>
+                                <% if has_been_evaluated(collaborator.id) %>
+                                    <span class="label label-primary">Lista</span>
+                                <% else %>
+                                    <span class="label label-danger">Pendiente</span>
+                                <% end %>
+                            </td>
+                        </tr>
+                        <% end %>
+                        </tbody>
+                        <tfoot>
+                        <tr>
+                            <td colspan="6">
+                                <ul class="pagination float-right"></ul>
+                            </td>
+                        </tr>
+                        </tfoot>
+                    </table>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="ibox">
+                <div class="ibox-title">
+                    <h3>Evaluadores</h3>
+                </div>
+                <div class="ibox-content">
+                    <table class="footable table table-stripped toggle-arrow-tiny" data-page-size="15">
+                        <thead>
+                        <tr>
+                            <th data-toggle="true">Nombre</th>
+                            <th data-toggle="true">Rut</th>
+                            <th data-toggle="true">Evalua a</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <% @to_evaluate.each do |evaluation| %>
+                            <% if (!evaluation.empty?) %>
+                            <tr>
+                                <td>
+                                    <%= evaluation[0].evaluator.collaborator.user.name %> <%= evaluation[0].evaluator.collaborator.user.last_name %>
+                                </td>
+                                <td>
+                                    <%= evaluation[0].evaluator.collaborator.user.rut %>
+                                </td>
+                                <td>
+                                    <% evaluation.each do |evaluator| %>
+                                        <div class="p-h-xs">
+                                            <div class="inline">
+                                                <%= evaluator.collaborator.user.name %> <%= evaluator.collaborator.user.last_name %> - <%= evaluator.collaborator.user.rut %> <br>
+                                            </div>
+                                            <% if has_been_evaluated(evaluator.id) %>
+                                                <span class="label label-primary">Lista</span>
+                                            <% else %>
+                                                <span class="label label-danger">Pendiente</span>
+                                            <% end %>
+                                        </div>
+                                    <% end %>
+                                </td>
+                            </tr>
+                            <% end %>
+                        <% end %>
+                        </tbody>
+                        <tfoot>
+                        <tr>
+                            <td colspan="6">
+                                <ul class="pagination float-right"></ul>
+                            </td>
+                        </tr>
+                        </tfoot>
+                    </table>
+
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 </div>
